<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_card_gift_card_black_24dp"
            android:title="@string/drawer_offers"/>
    </group>
    <group android:id="@+id/nav_user_group">
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/drawer_wish_list" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/drawer_my_orders" />

    </group>
    <group>
        <item
            android:id="@+id/nav_login"
            android:title="@string/drawer_login"
            android:icon="@drawable/ic_person_black_24dp"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/drawer_logout"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:visible="false" />
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/drawer_about_us" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/drawer_help" />
    </group>



</menu>
